[gd_scene load_steps=10 format=3 uid="uid://b1skxdskftdb1"]

[ext_resource type="Script" path="res://Scenes/Stages/Stage1/Enemies/Leader1.gd" id="1_4ugb7"]
[ext_resource type="PackedScene" uid="uid://b0tn4emgjhr2k" path="res://Scenes/Stages/Stage1/bullet_1.tscn" id="2_k8250"]
[ext_resource type="PackedScene" uid="uid://hvjgou0g2epr" path="res://Scenes/run_away_area.tscn" id="3_i0emk"]
[ext_resource type="Texture2D" uid="uid://c5ux7i7eo57ur" path="res://Assets/Stages/01/Enemies/Leader1.png" id="3_l2oqk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8ly0h"]
radius = 27.0185

[sub_resource type="CircleShape2D" id="CircleShape2D_ott4b"]
radius = 31.0

[sub_resource type="Animation" id="Animation_dvko0"]
resource_name = "Walking"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(6, -38), Vector2(6, -30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.2, 0.175)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(6, -38), Vector2(6, -30)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.2, 0.175)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_442tn"]
_data = {
"Walking": SubResource("Animation_dvko0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pb5dc"]
size = Vector2(380, 665)

[node name="Leader1" type="RigidBody2D" groups=["Enemy", "Leader"]]
collision_layer = 21
collision_mask = 21
gravity_scale = 0.0
lock_rotation = true
linear_damp = 4.0
script = ExtResource("1_4ugb7")
bullet = ExtResource("2_k8250")

[node name="EnemySprite" type="Sprite2D" parent="."]
position = Vector2(6, -38)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_l2oqk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_8ly0h")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="RunAwayArea" parent="." instance=ExtResource("3_i0emk")]
visible = false
scale = Vector2(0.3, 0.3)
collision_layer = 4
collision_mask = 4

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_ott4b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Walking"
libraries = {
"": SubResource("AnimationLibrary_442tn")
}

[node name="Hitbox" type="Area2D" parent="." groups=["EnemyHitbox"]]
visible = false
position = Vector2(6, -38)
scale = Vector2(0.2, 0.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-15, -2.50002)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_pb5dc")

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
